outline_error_5.txt
    Checking deve_web v0.0.1 (E:\gitclone\Deve-Note\apps\web)
error: extern blocks must be unsafe
  --> apps\web\src\editor\ffi.rs:2:1
   |
 2 | / extern "C" {
 3 | |     pub fn setupCodeMirror(element: &web_sys::HtmlElement, on_update: &Closure<dyn FnMut(String)>);
 4 | |     
 5 | |     pub fn applyRemoteContent(text: &str);
...  |
11 | |     pub fn scroll_global(line: usize);
12 | | }
   | |_^

error: cannot find attribute `wasm_bindgen` in this scope
 --> apps\web\src\editor\ffi.rs:1:3
  |
1 | #[wasm_bindgen]
  |   ^^^^^^^^^^^^
  |
  = note: `wasm_bindgen` is in scope, but it is a crate, not an attribute
help: `wasm_bindgen` is an attribute that can be used by the derive macro `BindgenedStruct`, you might be missing a `derive` attribute
  |
2 + #[derive(BindgenedStruct)]
3 | extern "C" {
  |
help: consider importing this attribute macro
  |
1 + use wasm_bindgen::prelude::wasm_bindgen;
  |

error: cannot find attribute `wasm_bindgen` in this scope
  --> apps\web\src\editor\ffi.rs:10:7
   |
10 |     #[wasm_bindgen(js_name = scrollGlobal)]
   |       ^^^^^^^^^^^^
   |
   = note: `wasm_bindgen` is an attribute that can be used by the derive macro `BindgenedStruct`, you might be missing a `derive` attribute
   = note: `wasm_bindgen` is in scope, but it is a crate, not an attribute
help: consider importing this attribute macro
   |
 1 + use wasm_bindgen::prelude::wasm_bindgen;
   |

error[E0412]: cannot find type `Closure` in this scope
 --> apps\web\src\editor\ffi.rs:3:72
  |
3 |     pub fn setupCodeMirror(element: &web_sys::HtmlElement, on_update: &Closure<dyn FnMut(String)>);
  |                                                                        ^^^^^^^ not found in this scope
  |
help: consider importing this struct
  |
1 + use wasm_bindgen::closure::Closure;
  |

warning: unused import: `leptos::prelude::*`
 --> apps\web\src\i18n.rs:1:5
  |
1 | use leptos::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0133]: call to unsafe function `editor::ffi::scroll_global` is unsafe and requires unsafe block
  --> apps\web\src\editor\mod.rs:36:9
   |
36 |         ffi::scroll_global(line);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

Some errors have detailed explanations: E0133, E0412.
For more information about an error, try `rustc --explain E0133`.
warning: `deve_web` (bin "deve_web") generated 1 warning
error: could not compile `deve_web` (bin "deve_web") due to 5 previous errors; 1 warning emitted
